Traffic Junkie Tested

--- a/TrafficJunkie_Demo/build.properties
+++ b/TrafficJunkie_Demo/build.properties
@@ -65,3 +65,8 @@ Nokia_SDK_1_1_Java.includes=src\
 
 Nokia_SDK_1_1_Java.excludes=\
 
+Nokia_Asha_SDK_1_0.includes=src\
+,res\
+
+Nokia_Asha_SDK_1_0.excludes=\
+
